--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/nayanrajani/GitOps.git
+    repoURL: https://github.com/nayanrajani/argocd-sample-app.git
     targetRevision: HEAD
     path: dev
   destination:
